k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stylehub-clothing-service
spec:
  selector:
    app: stylehub-clothing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
