k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stylehub-clothing-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:851725538748:certificate/7807c192-1d5d-418f-8079-56389cf9ca7 #add certificate arn
spec:
  ingressClassName: alb
  rules:
    - host: devildevops.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stylehub-clothing-service
                port:
                  number: 80
